clarify logic for openScreenshotsFolder, refactor preferences access, and clarify method names

Summary:
New openScreenshotsFolder logic is to highlight recently saved file, then default save location
(save mode) or last saved file's folder (save as mode) with failsafe as default save location.
SpectacleConfig now stores the last saved files and can determine the last saved file location from the
file name through separate method. Removed extraneous methods and variables from ExportManager.
ExportManager now uses SpectacleConfig to access save location preferences.

BUG: 394182

Reviewers: #spectacle, ngraham

Reviewed By: #spectacle, ngraham

Subscribers: ngraham, #spectacle

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D15908